...
              setTaskDuration(null);
              setModalVisible(true);
            }}>
            <Text style={styles.plusButtonText}>+</Text>
          </TouchableOpacity>
          <TouchableOpacity style={styles.pathButton} onPress={generateRoute}>
            <Text style={styles.pathButtonText}>Generate Path</Text>
          </TouchableOpacity>
        </View>
      </View>
      <TaskFormModal
        modalVisible={modalVisible}
        setModalVisible={setModalVisible}
...
