...
        />
      </View>
    );
  } else {
    return (
      <TouchableOpacity onPress={toggleStartTimePicker} style={styles.addTimeButton}>
        <Text style={styles.addTimeButtonText}>Set Time</Text>
      </TouchableOpacity>
    );
  }
}

const styles = StyleSheet.create({
...
